namespaces/live.cloud-platform.service.justice.gov.uk/intranet-demo/04-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default
  namespace: intranet-demo
spec:
  podSelector: { }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector: { }
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-ingress-controllers
  namespace: intranet-demo
spec:
  podSelector: { }
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              component: ingress-controllers
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-prometheus-scraping
  namespace: intranet-demo
spec:
  podSelector:
    matchLabels:
      app: intranet-demo
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          component: monitoring
